# memex

./: .envrc  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
crates/atlas/: Cargo.toml
crates/atlas/src/: cli.rs  client.rs  config.rs  daemon.rs  event.rs  extraction.rs  fact.rs  handler.rs  lib.rs  main.rs  memo.rs  multi_step_extraction.rs  pid.rs  query.rs  record.rs  record_extraction.rs  schema.rs  store.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  completions.rs  config.rs  daemon.rs  help.rs  launchd.rs  main.rs  systemd.rs  web.rs
crates/cli/templates/: activity.html  companies.html  documents.html  events.html  index.html  layout.html  memos.html  people.html  projects.html  record_detail.html  records.html  repos.html  rules.html  shell.html  skills.html  task_detail.html  tasks.html  teams.html  technologies.html  threads.html  worker_detail.html  workers.html
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/cortex/: Cargo.toml
crates/cortex/examples/: spawn_test.rs
crates/cortex/src/: client.rs  error.rs  lib.rs  types.rs  worker.rs  worktree.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  service.rs
crates/db/: Cargo.toml
crates/db/migrations/atlas/: 1735776000_memo_schema.surql  1737158400_record_schema.surql  1737244800_flexible_schema.surql  1767398400_event_schema.surql  1767484800_fulltext_search.surql  1767571200_fact_extraction.surql  1769179600_purge_support.surql  1769340000_record_aliases.surql  1769400000_fact_record.surql  1769429008_backfill_aliases.surql
crates/db/migrations/forge/: 1735689600_initial_schema.surql  1767484800_fulltext_search.surql  1768780800_worker_schema.surql
crates/db/src/: config.rs  connection.rs  lib.rs  migrations.rs
crates/evals/: Cargo.toml
crates/evals/fixtures/extraction/: code_vs_technology.toml  conflicting_updates.toml  context_assembly.toml  entity_disambiguation.toml  implicit_relationships.toml  multi_team_project.toml  record_evolution.toml  repo_vs_paths.toml  rule_deduplication.toml  small_company.toml  sparse_context.toml  task_ids_noise.toml
crates/evals/fixtures/retrieval/: basic_reliability.toml  context_assembly.toml  multi_hop_reasoning.toml  negative_queries.toml  temporal_queries.toml
crates/evals/fixtures/snapshots/: enterprise_org.json  open_source_project.json  startup_minimal.json
crates/evals/src/: comparative.rs  extraction.rs  harness.rs  judge.rs  lib.rs  loader.rs  main.rs  scenario.rs  snapshot.rs
crates/forge/: Cargo.toml
crates/forge/migrations/: 001_initial_schema.surql  002_memo_schema.surql
crates/forge/src/: cli.rs  client.rs  handler.rs  lib.rs  migrations.rs  store.rs  task.rs  worker.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  protocol.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs  models.rs
crates/watcher/: Cargo.toml  README.md
crates/watcher/src/: lib.rs  parser.rs  watcher.rs
crates/web/: Cargo.toml
crates/web/pkg/: .gitignore  memex_web.js  memex_web_bg.wasm
crates/web/src/: app.rs  components.rs  lib.rs  main.rs  types.rs
crates/web/style/: main.css
