[workspace]
members = ["crates/cli", "crates/atlas", "crates/cortex", "crates/db", "crates/evals", "crates/forge", "crates/ipc", "crates/llm", "crates/mcp", "crates/watcher"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Luke Barbuto <luke.barbuto@gmail.com>"]
license = "BSL-1.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
surrealdb = { version = "2", features = ["kv-rocksdb", "protocol-ws"] }
dirs = "5"
