[package]
name = "atlas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory and knowledge graph for Memex"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
surrealdb.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
sha2 = "0.10"

db = { path = "../db" }
ipc = { path = "../ipc" }
llm = { path = "../llm" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
