[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memex command-line interface and daemon"

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
forge = { path = "../forge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
toml = "0.8"
directories = "5"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
