[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memex command-line interface and daemon"

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
atlas = { path = "../atlas" }
db = { path = "../db" }
forge = { path = "../forge" }
ipc = { path = "../ipc" }
llm = { path = "../llm" }
mcp = { path = "../mcp" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
carapace_spec_clap = "1.1"
dirs = "6.0"
serde_yaml = "0.9"
chrono.workspace = true
uuid.workspace = true
toml = "0.8"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
exec = "0.3"
