[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memex command-line interface and daemon"

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
atlas = { path = "../atlas" }
cortex = { path = "../cortex" }
db = { path = "../db" }
forge = { path = "../forge" }
ipc = { path = "../ipc" }
llm = { path = "../llm" }
mcp = { path = "../mcp" }
memex-web = { path = "../web", default-features = false }
vibetree = "0.2.5"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
carapace_spec_clap = "1.1"
dirs = "6.0"
hostname = "0.4"
serde_yaml = "0.9"
chrono.workspace = true
uuid.workspace = true
toml = "0.8"
futures = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
exec = "0.3"
# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
