[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
surrealdb.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
dirs = "5"
toml = "0.8"
