[package]
name = "evals"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Evaluation framework for Memex"

[[bin]]
name = "memex-eval"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dirs.workspace = true

atlas = { path = "../atlas" }
forge = { path = "../forge" }
llm = { path = "../llm" }
ipc = { path = "../ipc" }
