[package]
name = "forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Task and work management for Memex"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
