[package]
name = "mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for Memex task management"

[lib]
name = "mcp"
path = "src/lib.rs"

[dependencies]
atlas = { path = "../atlas" }
forge = { path = "../forge" }
ipc = { path = "../ipc" }
mcp-attr = "0.0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
