[package]
name = "memex-tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
memex-common = { path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
