[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# File watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System directories
dirs = "5"

[dev-dependencies]
tempfile = "3"
