[package]
name = "memex-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", optional = true }
console_error_panic_hook = "0.1"
leptos = { version = "0.6" }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = "0.2"

# Memex crates (server-side only)
ipc = { path = "../ipc", optional = true }
dirs = { version = "5", optional = true }

# Client-side HTTP
gloo-net = { version = "0.5", optional = true }
web-sys = { version = "0.3", optional = true, features = ["KeyboardEvent"] }

# Markdown rendering
pulldown-cmark = "0.10"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "gloo-net", "web-sys"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:ipc",
    "dep:dirs",
    "leptos/ssr",
    "leptos_axum",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
# Name of the binary target used to run the server
bin-target = "memex-web"
# The name used by wasm-bindgen/wasm-pack
output-name = "memex-web"
# The site root folder is where cargo-leptos generate all output
site-root = "target/site"
# Assets source dir. All files found here will be copied and synchronized to site-root
site-addr = "127.0.0.1:3000"
# The port number used for automatic reload monitoring
reload-port = 3001
# When building for Tailwind, use this command
style-file = "style/main.css"
# Static files (served from site-root/pkg)
assets-dir = "assets"
